customer-apps/simplenodeservice-team03-preprod/argoapp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "simplenodeservice-team03"
  namespace: "simplenodeservice-team03-preprod-cd"
  labels:
    dt.owner: "team03"
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: "userinterface"
